--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="./assets/estilo.css"
 </head>
 <body>
-    <h1> FLASH CARD DA BARBIE </h1>
+    <h1> 𝔽𝕃𝔸𝕊ℍ ℂ𝔸ℝ𝔻 𝔻𝔸 𝔹𝔸ℝ𝔹𝕀𝔼 </h1>
     <main class="conteudo">
+        <section> 
+<article class="cartao">
+    <div class="cartao--pergunta">Qual verdadeiro nome da Barbie?</div> 
+    <div class="cartao--resposta">Bárbara Millicent Roberts</div>
 
+</article>
+        </section>
     </main>
     <footer><p>Desenvolvido por Julia N. - Kauã - Gabriella / 2C</p></footer>
 </body>
