--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <div class="cartao--resposta">Bárbara Millicent Roberts</div>
 
 </article>
+
+<article class="cartao"></article>
+    <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div> 
+    <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
+
+</article>
         </section>
     </main>
     <footer><p>Desenvolvido por Julia N. - Kauã - Gabriella / 2C</p></footer>
