--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </article>
 
 <article class="cartao"></article>
-    <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div> 
+    <div class="cartao--pergunta"><p>Quantas profissões a Barbie tem?</p>/div> 
     <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
 
 </article>
