--- a/index.html
+++ b/index.html
@@ -21,24 +21,11 @@
 </article>
 
 <article class="cartao"></article>
-    <div class="cartao--pergunta"></div> 
-    <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
+    <div class="cartao--pergunta">Quantos animais de estimação ela tem?</div> 
+    <div class="cartao--resposta">Taffy, Honey, DJ e Rookie Roberts</div>
 </article>
 
-<article class="cartao"></article>
-    <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div> 
-    <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
-</article>
 
-<article class="cartao"></article>
-    <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div> 
-    <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
-</article>
-
-<article class="cartao"></article>
-    <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div> 
-    <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
-</article>
 
 
         </section>
