--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
 </article>
 
-<article class="cartao"></article>
+<article class="cartao">
     <div class="cartao--pergunta">Quantos animais de estimação ela tem?</div> 
     <div class="cartao--resposta">Taffy, Honey, DJ e Rookie Roberts</div>
 </article>
  </section>
- 
+
     </main>
     <footer><p>Desenvolvido por Julia N. - Kauã - Gabriella / 2C</p></footer>
 </body>
