--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/estilo.css"
-</head>
+    <link rel="stylesheet" href="./assets/estilo.css" </head>
+
 <body>
     <h1> 𝔽𝕃𝔸𝕊ℍ ℂ𝔸ℝ𝔻 𝔻𝔸 𝔹𝔸ℝ𝔹𝕀𝔼 </h1>
-    <main class="conteudo">
-        <section> 
-<article class="cartao">
-    <div class="cartao--pergunta">Qual verdadeiro nome da Barbie?</div> 
-    <div class="cartao--resposta">Bárbara Millicent Roberts</div>
-</article>
+    <main >
+        <section class="conteudo">
+            <article class="cartao">
+                <div class="cartao--pergunta">Qual verdadeiro nome da Barbie?</div>
+                <div class="cartao--resposta">Bárbara Millicent Roberts</div>
+            </article>
 
-<article class="cartao">
-    <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div> 
-    <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
-</article>
+            <article class="cartao">
+                <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div>
+                <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
+            </article>
 
-<article class="cartao">
-    <div class="cartao--pergunta">Quantos animais de estimação ela tem?</div> 
-    <div class="cartao--resposta">Taffy, Honey, DJ e Rookie Roberts</div>
-</article>
- </section>
+            <article class="cartao">
+                <div class="cartao--pergunta">Quantos animais de estimação ela tem?</div>
+                <div class="cartao--resposta">Taffy, Honey, DJ e Rookie Roberts</div>
+            </article>
+        </section>
 
     </main>
-    <footer><p>Desenvolvido por Julia N. - Kauã - Gabriella / 2C</p></footer>
+    <footer>
+        <p>Desenvolvido por Julia N. - Kauã - Gabriella / 2C</p>
+    </footer>
 </body>
+
 </html>
