--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </main>
     <footer>
-        <p>Desenvolvido por Julia N. - Kauã - Gabriella / 2C</p>
+        <p>Desenvolvido por Julia N. - Kauã - Gabriela / 2C</p>
     </footer>
 </body>
 
