--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -8,29 +8,27 @@
     <link rel="stylesheet" href="./assets/estilo.css" </head>
 
 <body>
-    <h1> 𝔽𝕃𝔸𝕊ℍ ℂ𝔸ℝ𝔻 𝔻𝔸 𝔹𝔸ℝ𝔹𝕀𝔼 </h1>
-    <main >
-        <section class="conteudo">
-            <article class="cartao">
-                <div class="cartao--pergunta">Qual verdadeiro nome da Barbie?</div>
-                <div class="cartao--resposta">Bárbara Millicent Roberts</div>
-            </article>
 
-            <article class="cartao">
-                <div class="cartao--pergunta">Quantas profissões a Barbie tem?</div>
-                <div class="cartao--resposta">a Barbie possui mais de 200 profissões no seu currículo</div>
-            </article>
+<section class="container">
+<h1 class="container titulo"> BIOTECNOLOGIA VERDE </h1>
+</section>
+<main >
+<section class="conteudo">
+<carticle class="cartao">
+<div class="cartao conteudo>
 
-            <article class="cartao">
-                <div class="cartao--pergunta">Quantos animais de estimação ela tem?</div>
-                <div class="cartao--resposta">Taffy, Honey, DJ e Rookie Roberts</div>
-            </article>
-        </section>
-
-    </main>
-    <footer>
-        <p>Desenvolvido por Julia N. - Kauã - Gabriela / 2C</p>
-    </footer>
-</body>
-
-</html>
+<div class="cartao pergunta"></div>
+<p>0 QUE É BIOTECNOLOGIA VERDE E COMO ELA SE DIFERENCIA DE OUTRAS FORMAS DE BIOTECNOLOGIA?</p>
+</div>
+adiv class=ncartao--resposta">
+<p>Responsável pela agricultura. Nutrir e fertilizar as plantações e combater pragas e fenómenos climatológicos são exemplos da sua aplicação.</p>
+</div>
+</div>
+</article>
+<article class="cartao">
+<div class="cartao conteudo">
+<div class-"cartao pergunta">
+<p>COMO A BIOTECNOLOGIA VERDE PODE AJUDAR NA CONSERVAÇÃO DA BIODIVERSIDADE?</p>
+</div>
+<div class="cartao - resposta">
+<É 
