--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <section class="container">
-<h1 class="container titulo"> BIOTECNOLOGIA VERDE </h1>
+<h1 class="container titulo"> BARBIE</h1>
 </section>
 <main >
 <section class="conteudo">
@@ -18,17 +18,17 @@
 <div class="cartao conteudo>
 
 <div class="cartao pergunta"></div>
-<p>0 QUE É BIOTECNOLOGIA VERDE E COMO ELA SE DIFERENCIA DE OUTRAS FORMAS DE BIOTECNOLOGIA?</p>
+<p>Qual o verdadeiro nome da Barbie</p>
 </div>
-adiv class=ncartao--resposta">
-<p>Responsável pela agricultura. Nutrir e fertilizar as plantações e combater pragas e fenómenos climatológicos são exemplos da sua aplicação.</p>
+<div class=cartao--resposta">
+<p>Barbara Millicents Roberts</p>
 </div>
 </div>
 </article>
 <article class="cartao">
 <div class="cartao conteudo">
-<div class-"cartao pergunta">
-<p>COMO A BIOTECNOLOGIA VERDE PODE AJUDAR NA CONSERVAÇÃO DA BIODIVERSIDADE?</p>
+<div class="cartao pergunta">
+<p>Quantas profissões a Barbie tem</p>
 </div>
 <div class="cartao - resposta">
-<É 
+<p>Mais de 180</p>
