--- a/index.html
+++ b/index.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/estilo.css" </head>
-
+    <title>Flash Card da Barbie</title>
+    <link rel="stylesheet" href="./assets/estilo.css">
+</head>
 <body>
+    <main>
+<section id="conteudo">
 
-<section class="container">
-<h1 class="container titulo"> BARBIE</h1>
 </section>
-<main >
-<section class="conteudo">
-<carticle class="cartao">
-<div class="cartao conteudo>
 
-<div class="cartao pergunta"></div>
-<p>Qual o verdadeiro nome da Barbie</p>
-</div>
-<div class=cartao--resposta">
-<p>Barbara Millicents Roberts</p>
-</div>
-</div>
-</article>
-<article class="cartao">
-<div class="cartao conteudo">
-<div class="cartao pergunta">
-<p>Quantas profissões a Barbie tem</p>
-</div>
-<div class="cartao - resposta">
-<p>Mais de 180</p>
+    </main>
+    <footer>Desenvolvido por Júlia,Gabriela e Kauã</footer>
+    <script src="./main.js"></script>
+    <script src="./pergunta.js"></script>
+</body>
+</html>
